--- a/fireworks.html
+++ b/fireworks.html
@@ -1,18 +1,136 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>YAY 🎆</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>She Said YES 🎆</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: black;
+      overflow: hidden;
+      color: white;
+      font-family: Poppins, sans-serif;
+    }
+
+    h1 {
+      position: fixed;
+      top: 40%;
+      width: 100%;
+      text-align: center;
+      font-size: 3rem;
+      z-index: 2;
+    }
+
+    button {
+      position: fixed;
+      top: 55%;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 14px 30px;
+      border-radius: 30px;
+      border: none;
+      background: pink;
+      font-size: 1.1rem;
+      cursor: pointer;
+      z-index: 2;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+    }
+  </style>
 </head>
-<body class="fireworks-bg">
 
-<h1>You said YES 💖🎆</h1>
+<body>
 
-<div class="fireworks">✨🎆✨🎆✨</div>
-
+<h1>You said YES 💖</h1>
 <button onclick="window.location.href='form.html'">
   Next 💌
 </button>
 
+<canvas id="canvas"></canvas>
+
+<script>
+const canvas = document.getElementById("canvas");
+const ctx = canvas.getContext("2d");
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+function random(min, max) {
+  return Math.random() * (max - min) + min;
+}
+
+class Firework {
+  constructor() {
+    this.x = random(0, canvas.width);
+    this.y = canvas.height;
+    this.targetY = random(100, canvas.height / 2);
+    this.speed = random(4, 7);
+    this.exploded = false;
+    this.particles = [];
+  }
+
+  update() {
+    if (!this.exploded) {
+      this.y -= this.speed;
+      if (this.y <= this.targetY) {
+        this.exploded = true;
+        for (let i = 0; i < 40; i++) {
+          this.particles.push({
+            x: this.x,
+            y: this.y,
+            angle: Math.random() * Math.PI * 2,
+            speed: random(1, 5),
+            life: 60
+          });
+        }
+      }
+    }
+  }
+
+  draw() {
+    if (!this.exploded) {
+      ctx.fillStyle = "white";
+      ctx.fillRect(this.x, this.y, 2, 2);
+    } else {
+      this.particles.forEach(p => {
+        ctx.fillStyle = "pink";
+        ctx.fillRect(p.x, p.y, 2, 2);
+        p.x += Math.cos(p.angle) * p.speed;
+        p.y += Math.sin(p.angle) * p.speed;
+        p.life--;
+      });
+    }
+  }
+}
+
+let fireworks = [];
+
+function animate() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+  if (Math.random() < 0.05) {
+    fireworks.push(new Firework());
+  }
+
+  fireworks.forEach(f => {
+    f.update();
+    f.draw();
+  });
+
+  fireworks = fireworks.filter(f =>
+    !f.exploded || f.particles.some(p => p.life > 0)
+  );
+
+  requestAnimationFrame(animate);
+}
+
+animate();
+</script>
+
 </body>
 </html>
+
