--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <!-- IMPORTANT: this class controls the background -->
-<body class="login-page">
+<body class="login-bg">
 
   <div class="login-card">
     <h1>🔐 Enter the Secret Password</h1>
@@ -40,5 +40,5 @@
     }
   </script>
 
-</body>
+<body class="login-bg">
 </html>
