--- a/question.html
+++ b/question.html
@@ -1,61 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>For Haniya 💖</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>For Haniya ❤️</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
 
-<body class="soft-bg">
+    <div class="overlay">
+        <div class="card">
 
-<h1>❤️ Haniya ❤️</h1>
-<h1>Will you be my Valentine?</h1>
-<p class="subtitle">Every moment with you feels like a dream come true…</p>
+            <img src="images/proposal.jpg" alt="Our moment" class="photo">
 
-<div style="margin-top:40px;">
-  <button id="yes">Yes 💖</button>
-  <button id="no" style="background:#fff;color:#ff4f8b;margin-left:15px;">
-    No 😒
-  </button>
-</div>
+            <div class="content">
+                <h1>Haniya ❤️</h1>
+                <h2>Will you be my Valentine?</h2>
 
-<div id="message" class="bubble" style="display:none;"></div>
+                <p>
+                    From that moment to every moment after…  
+                    I would still choose you, again and again.
+                </p>
 
-<script>
-let noClicks = 0;
-const messages = [
-  "Really? 😏",
-  "Try again 💕",
-  "You can’t escape love 💘",
-  "Stop lying to yourself 😌",
-  "Okay okay… last chance 😈"
-];
+                <div class="buttons">
+                    <button class="yes">Yes ❤️</button>
+                    <button class="no">No 😒</button>
+                </div>
+            </div>
 
-const noBtn = document.getElementById("no");
-const yesBtn = document.getElementById("yes");
-const msg = document.getElementById("message");
-
-noBtn.onclick = () => {
-  msg.style.display = "block";
-  msg.innerText = messages[noClicks] || "Fine… now click YES 💖";
-
-  noBtn.style.position = "absolute";
-  noBtn.style.left = Math.random() * 70 + "%";
-  noBtn.style.top = Math.random() * 70 + "%";
-
-  yesBtn.style.position = "absolute";
-  yesBtn.style.left = Math.random() * 70 + "%";
-  yesBtn.style.top = Math.random() * 70 + "%";
-
-  noClicks++;
-
-  if (noClicks > messages.length) {
-    yesBtn.onclick = () => {
-      window.location.href = "fireworks.html";
-    };
-  }
-};
-</script>
+        </div>
+    </div>
 
 </body>
 </html>
