--- a/question.html
+++ b/question.html
@@ -5,8 +5,7 @@
     <title>For Haniya ❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
+<body class="question-page">
     <div class="overlay">
         <div class="card">
 
