--- a/question.html
+++ b/question.html
@@ -5,27 +5,26 @@
     <title>For Haniya ❤️</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="question-page">
-    <div class="overlay">
-        <div class="card">
 
-            <img src="images/proposal.jpg" alt="Our moment" class="photo">
+    <div class="hero">
+        <div class="overlay"></div>
 
-            <div class="content">
-                <h1>Haniya ❤️</h1>
-                <h2>Will you be my Valentine?</h2>
+        <div class="text">
+            <h1>Haniya <span>❤️</span></h1>
 
-                <p>
-                    From that moment to every moment after…  
-                    I would still choose you, again and again.
-                </p>
+            <h2>Will you be my Valentine?</h2>
 
-                <div class="buttons">
-                    <button class="yes">Yes ❤️</button>
-                    <button class="no">No 😒</button>
-                </div>
+            <p>
+                From that moment to every moment after…  
+                I would still choose you, again and again.
+            </p>
+
+            <div class="buttons">
+                <button class="yes">Yes ❤️</button>
+                <button class="no">No 😒</button>
             </div>
-
         </div>
     </div>
 
