--- a/question.html
+++ b/question.html
@@ -8,25 +8,25 @@
 
 <body class="question-page">
 
-    <div class="hero">
-        <div class="overlay"></div>
+    <section class="hero">
+        <div class="hero-overlay"></div>
 
-        <div class="text">
+        <div class="hero-text">
             <h1>Haniya <span>❤️</span></h1>
 
             <h2>Will you be my Valentine?</h2>
 
             <p>
-                From that moment to every moment after…  
+                From that moment to every moment after —  
                 I would still choose you, again and again.
             </p>
 
-            <div class="buttons">
+            <div class="hero-buttons">
                 <button class="yes">Yes ❤️</button>
                 <button class="no">No 😒</button>
             </div>
         </div>
-    </div>
+    </section>
 
 </body>
 </html>
