--- a/question.html
+++ b/question.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>For Haniya ❤️</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>For Haniya ❤️</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="question-page">
 
-    <section class="hero">
-        <div class="hero-overlay"></div>
+  <div class="bg"></div>
 
-        <div class="hero-text">
-            <h1>Haniya <span>❤️</span></h1>
+  <div class="floating-content">
+    <h1>Haniya ❤️</h1>
 
-            <h2>Will you be my Valentine?</h2>
+    <h2>Will you be my Valentine?</h2>
 
-            <p>
-                From that moment to every moment after —  
-                I would still choose you, again and again.
-            </p>
+    <p>
+      From that moment to every moment after…  
+      I still choose you. Every single time.
+    </p>
 
-            <div class="hero-buttons">
-                <button class="yes">Yes ❤️</button>
-                <button class="no">No 😒</button>
-            </div>
-        </div>
-    </section>
+    <div class="buttons">
+      <button class="yes">Yes 💕</button>
+      <button class="no">No 😒</button>
+    </div>
+  </div>
 
 </body>
 </html>
