--- a/question.html
+++ b/question.html
@@ -21,8 +21,8 @@
     </p>
 
     <div class="buttons">
-      <button id="yesBtn" class="yes">Yes 💕</button>
-      <button id="noBtn" class="no">No 😒</button>
+      <<button id="yesBtn">Yes 💕</button>
+      <button id="noBtn">No 😒</button>
     </div>
   </div>
 <script>
