--- a/question.html
+++ b/question.html
@@ -78,7 +78,7 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 
   // YES RUNS AWAY UNTIL NO IS GONE
-  yesBtn.addEventListener("mouseenter", () => {
+  yesBtn.addEventListener("mousemove", () => {
     if (!noAlive) return;
     randomMove(yesBtn, 120);
   });
