--- a/question.html
+++ b/question.html
@@ -25,8 +25,11 @@
     </p>
 
     <div class="buttons">
-      <button id="yesBtn">Yes 💕</button>
-      <button id="noBtn">No 😒</button>
+      <div class="buttons">
+        <button id="yesBtn">Yes 💕</button>
+        <button id="noBtn">No 😒</button>
+      </div>
+
     </div>
   </div>
 
