--- a/question.html
+++ b/question.html
@@ -29,6 +29,7 @@
 
   <!-- SCRIPT -->
   <script>
+    alert("QUESTION PAGE JS LOADED");
     document.addEventListener("DOMContentLoaded", () => {
 
       const yesBtn = document.getElementById("yesBtn");
