--- a/question.html
+++ b/question.html
@@ -8,16 +8,20 @@
 
 <body class="question-page">
 
-  <!-- BACKGROUND IMAGE -->
   <div class="bg"></div>
 
-  <!-- CONTENT -->
   <div class="floating-content">
-    <h1>Will you be my Valentine? 💖</h1>
+    <h1>Haniya ❤️</h1>
+    <h2>Will you be my Valentine?</h2>
+
+    <p>
+      From that moment to every moment after…  
+      I still choose you. Every single time.
+    </p>
 
     <div class="buttons">
-      <button id="yesBtn">YES</button>
-      <button id="noBtn">NO</button>
+      <button id="yesBtn">Yes 💖</button>
+      <button id="noBtn">No 😢</button>
     </div>
   </div>
 
