--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       const error = document.getElementById("error");
 
       if (pass === "slubbyservesqueen") {
-        window.location.href = "question.html";
+        window.location.href = "proposal.html";
       } else {
         error.innerText = "❌ Wrong password… play the scavenger hunt to unlock it 😌";
         error.classList.remove("shake");
